@@ -25,6 +25,7 @@ from pycam.Geometry.Line import Line
 from pycam.Geometry.Point import Point
 from pycam.Geometry import get_points_of_arc
 import pycam.Utils.log
+from pycam.Utils import open_url
 
 log = pycam.Utils.log.get_logger()
 
@@ -173,7 +174,7 @@ class CXFParser(object):
 
 def import_font(filename, callback=None):
     try:
-        infile = open(filename,"r")
+        infile = open_url(filename)
     except IOError, err_msg:
         log.error("CXFImporter: Failed to read file (%s): %s" \
                 % (filename, err_msg))
