@@ -13,6 +13,8 @@ Version 0.4.1 - UNRELEASED
  * added a configuration setting for automatically loading a custom task settings file on startup
  * added a simple "undo" feature for reversing model manipulations
  * added a minimum step width for GCode positions to be written
+ * enabled drag'n'drop for loading models
+ * support non-local file handling (e.g. http, ...)
  * the scroll wheel now behaves similarly to Inkscape's interface (pan and zoom)
  * the default filename extension for exported GCode files is now configurable
  * unify DropCutter behaviour for models that are higher than the defined bounding box
